# factory-installer

./: .gitignore  .gitmodules  .vscode  CMakeLists.txt  Jenkinsfile  README.md  build  build.sh  config.json  factory-installer.iss  lv_conf.h  main.c  mainlib.cpp  my_device.cpp  my_device.h  rendering_engine.c  rendering_engine.h  scp_session.cpp  ssh_session.cpp  x86_64-w64-mingw32.cmake
.vscode.linux/: launch.json
.vscode.windows/: cmake-kits.json
cmake-modules/: FindOpenSSL.cmake  FindSDL2.cmake  FindZLIB.cmake  libssh-config.cmake
json/: config.json
py/: main.py
toolchains/: x86_64-w64-mingw32.cmake  x86_64-w64-mingw32.sh
